SQRP-187 Add SCA steps telemetry